--- a/popup.html
+++ b/popup.html
@@ -86,6 +86,13 @@
       font-size: 0.9rem;
       font-style: italic;
     }
+
+    .footer {
+      margin-top: 16px;
+      text-align: center;
+      font-size: 0.8rem;
+      color: #777;
+    }
   </style>
 </head>
 
@@ -111,6 +118,8 @@
     <button id="pasteBtn">Paste to This Tab</button>
 
     <p id="status">...</p>
+    
+    <div class="footer">Made by BFRS02530</div>
   </div>
 
   <script src="popup.js"></script>
