--- a/popup.html
+++ b/popup.html
@@ -90,7 +90,7 @@
     .footer {
       margin-top: 16px;
       text-align: center;
-      font-size: 0.8rem;
+      font-size: 0.5rem;
       color: #777;
     }
   </style>
@@ -119,7 +119,7 @@
 
     <p id="status">...</p>
     
-    <div class="footer">Made by BFRS02530</div>
+    <div class="footer">Made by BFRS02530 for internal use</div>
   </div>
 
   <script src="popup.js"></script>
